crates/diffguard-core/src/snapshots/diffguard_core__sensor__tests__snapshot_sensor_report_no_findings.snap
---
source: crates/diffguard-app/src/sensor.rs
expression: json
---
{
  "schema": "sensor.report.v1",
  "tool": {
    "name": "diffguard",
    "version": "0.1.0"
  },
  "run": {
    "started_at": "2024-01-15T10:30:00Z",
    "ended_at": "2024-01-15T10:30:01Z",
    "duration_ms": 1234,
    "capabilities": {
      "git": {
        "status": "available"
      }
    }
  },
  "verdict": {
    "status": "pass",
    "counts": {
      "info": 0,
      "warn": 0,
      "error": 0
    },
    "reasons": []
  },
  "findings": [],
  "artifacts": [
    {
      "path": "artifacts/diffguard/report.json",
      "format": "json"
    }
  ],
  "data": {
    "diff": {
      "base": "origin/main",
      "context_lines": 0,
      "files_scanned": 2,
      "head": "HEAD",
      "lines_scanned": 50,
      "scope": "added"
    }
  }
}
